--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
 * {
-  font-family: "Poppins", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
 }
+
 body {
-  background: url(assets/bg.png) no-repeat center center fixed;
+  background: url('./assets/bg.png') no-repeat center center fixed;
 }
 
 .game_image{
@@ -21,40 +21,40 @@ body {
     font-weight: bold;
     margin-right: 450px;
 }
+
 .playBtn a{
     margin-top: 50px;
     text-decoration: none;
     color:white;
 }
+
 #start{
     size: 30px;
     color: white;
 }
 
 .score {
-  padding-top: 40px;
+  padding-top: 0px;
   display: flex;
   justify-content: center;
-  font-size: 100px;
   color: white;
-  font-weight: bolder;
+  font-size: 50px;
 }
 
 .main {
   display: flex;
   justify-content: space-around;
- 
 }
 
 .b {
   border: 3px solid #f7ba3e;
-  width: 400px;
-  height: 400px;
+  width: 500px;
+  height: 500px;
 }
 
 .user {
   display: grid;
-  grid-template-rows: 340px 55px;
+  grid-template-rows: 390px 60px;
 }
 .logos {
   display: flex;
@@ -62,24 +62,18 @@ body {
   visibility: visible;
 }
 .main img {
-  width: 50px;
+  width: 90px;
   height: auto;
 }
 
 #user-hand{
-  width: 400px;
-  height: 367px;
+  width: 500px;
+  height: 450px;
 }
 
 #Ai-hand{
-  width: 400px;
-  height: 367px;
-}
-
-.logos img {
-  width: 55px;
-  height: 55px;
-  margin: 0 10px;
+  width: 500px;
+  height: 450px;
 }
 
 h2{
@@ -91,12 +85,12 @@ h2{
   visibility: hidden;
   padding-top: 50px;
   color: white;
-  font-size: xx-large;
-  font-weight: bold;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  text-align: center;
+  padding: 5px 5px;
 }
+
 .play-again-box {
   background-color: #f7ba3e;
   border-radius: 5px;
